--- a/engines.html
+++ b/engines.html
@@ -733,8 +733,8 @@ function sortComparator(row1, row2) {
   let res = 0;
   for (let i = 0; i < state.sort.length && res === 0; i++) {
     const col = state.sort[i].col;
-    const a = sortCollate(row1[col], col);
-    const b = sortCollate(row2[col], col);
+    const a = sortCollate(row1[col], col, row1);
+    const b = sortCollate(row2[col], col, row2);
     if (a === b) continue;
     if (a === '' || b === '') {
       return a === '' ? 1 : -1;  // nulls always last
@@ -749,7 +749,7 @@ function sortComparator(row1, row2) {
   return res;
 }
 
-function sortCollate(val, col) {
+function sortCollate(val, col, row) {
   val = val ?? '';
   if (typeof val === 'object' && 'value' in val) {
     val = val.value;
@@ -758,6 +758,12 @@ function sortCollate(val, col) {
     val = Math.abs(val);  // negative if coming from dist_size
   }
   val = String(val).trim()
+  if (col === 'engine') {
+    val = row.title ?? row.engine ?? '';
+  }
+  if (col === 'description') {
+    val = row.summary ?? '';
+  }
   if (col === 'standard') {
     val = val.replace(/^no$/, 'ES0000');
     val = val.replace(/JS1.[0-2]/, 'ES0001');
