--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,3 @@
-<!-- SPDX-FileCopyrightText: 2026 Ivan Krasilnikov -->
-<!-- SPDX-License-Identifier: MIT -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,6 +7,12 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/main.ts"></script>
+    <script type="module">
+      import { createApp } from 'vue';
+      import App from './App.vue';
+      import './style.css';
+
+      createApp(App).mount('#app');
+    </script>
   </body>
 </html>
